add admin template into project src code

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
     -->
   <title>React App</title>
 
-  <script
+  <!-- <script
     src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script> -->
 
 </head>
 
