--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="Admin templates, Bootstrap Admin templates, Redux, React, Webpack, Bootstrap 4, Dashboard, Dashboard Templates, sass admin templates, html admin templates, Responsive, Bootstrap Admin templates free download, React Admin templates free download,premium Bootstrap Admin templates,premium React Admin templates download" />
   <meta name="author" content="Codedthemes" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/mainlogoCBC.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Cherish by Chatting</title>
 
   <!-- <script
     src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
