--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/cbc_logo_sm.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="Admin templates, Bootstrap Admin templates, Redux, React, Webpack, Bootstrap 4, Dashboard, Dashboard Templates, sass admin templates, html admin templates, Responsive, Bootstrap Admin templates free download, React Admin templates free download,premium Bootstrap Admin templates,premium React Admin templates download" />
   <meta name="author" content="Codedthemes" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/mainlogoCBC.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/cbc_logo_sm.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
